--- a/LurkViewer/AppShell.xaml
+++ b/LurkViewer/AppShell.xaml
@@ -4,11 +4,20 @@
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:views="clr-namespace:LurkViewer.Views"
-    Shell.FlyoutBehavior="Disabled">
+    Shell.FlyoutBehavior="Flyout">
+
+    <Shell.FlyoutHeaderTemplate>
+        <DataTemplate>
+            <Frame Padding="10" CornerRadius="0" BackgroundColor="LightGray">
+                <Label FontSize="Medium">Содержание</Label>
+            </Frame>
+        </DataTemplate>
+    </Shell.FlyoutHeaderTemplate>
 
     <ShellContent
-        Title="Home"
+        Title="Домой"
+        FlyoutItemIsVisible="False"
         ContentTemplate="{DataTemplate views:CategoriesPage}"
         Route="MainPage" />
-    
+
 </Shell>
