--- a/LurkViewer/Views/ArticlesPage.xaml
+++ b/LurkViewer/Views/ArticlesPage.xaml
@@ -15,7 +15,10 @@
             <ListView.ItemTemplate>
                 <DataTemplate x:DataType="model:Article">
                     <ViewCell>
-                        <Grid Padding="5,10">
+                        <Grid>
+                            <Grid.Padding>
+                                <OnIdiom Desktop="10,10" Default="5,10" />
+                            </Grid.Padding>
                             <Label Text="{Binding Name}" FontSize="Medium" />
                         </Grid>
                     </ViewCell>
